--- a/app.json
+++ b/app.json
@@ -41,8 +41,9 @@
         "origin": false
       },
       "eas": {
-        "projectId": "071792fb-ed8e-4e8e-9fef-ccb67af5b765"
+        "projectId": "846da1bc-0fd2-4431-886c-be23596f65be"
       }
-    }
+    },
+    "owner": "wilbr33zy"
   }
 }
